# ocfl-bot

./: .gitignore  API-DISCOVERY-XHR.md  API-DISCOVERY.md  DIRECTORY.md  FORM-DISCOVERY.md  README.md  SKILL.md  ocfl.py  pyproject.toml  wizard.py
forms/: building_permit_fields.json  dr501_fields.json  forms.py
